--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
+    "nodemailer": "^7.0.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
