--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.509.0"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.1"
   }
 }
